--- a/templates/details.html
+++ b/templates/details.html
@@ -2,55 +2,36 @@
 {% block title %} Patient details{% endblock title %}
 {% block form %}
 
-<div class="row">
-<div class="col-md-4"></div>
-
-<div class="col-md-4">
-<br>
-<br>
 <h1>Patient Details</h1>
-<div class="card p-3">
-
-<table class="table table-dark">
-  <thead>
-  <tr>
-  <th scope="col">DETAILS</th>
-   </tr>
-<tr>
-     <th scope="col">{{data.srfid}}</th>
-</tr>
-<tr>
-
-      <th scope="col">{{data.bedtype}}</th>
-</tr>
-<tr>
-
-      <th scope="col">{{data.bedtype}}</th>
-</tr>
-<tr>
-
-      <th scope="col">{{data.hcode}}</th>
-</tr>
-
-<tr>
-      <th scope="col">{{data.spo2}}</th>
-</tr>
-      <th scope="col">{{data.pname}}</th>
-</tr>
-<tr>
-
-      <th scope="col">{{data.pphone}}</th>
-    </tr>
-
-     <tr> 
-      <th scope="col">{{data.paddress}}</th>
-</tr>
-
-
- 
-
-
-  </thead>
+<br>
+<table class="table table-bordered">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">SRF ID</th>
+                <th scope="col">BED TYPE</th>
+                <th scope="col">HCODE</th>
+                <th scope="col">Oxygen Level</th>
+                <th scope="col">NAME</th>
+                <th scope="col">Mobile</th>
+                <th scope="col">Address</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>{{data.srfid}}</td>
+                <td>{{data.bedtype}}</td>
+                <td>{{data.hcode}}</td>
+                <td>{{data.spo2}}</td>
+                <td>{{data.pname}}</td>
+                <td>{{data.pphone}}</td>
+                <td>{{data.paddress}}</td>
+                
+              </tr>
+      
+            </tbody>
+          </table>
 
 
       
@@ -60,9 +41,6 @@
 
 
 
-</div>
-</div>
-<div class="col-md-4"></div>
 
-</div>
+
 {% endblock form %}
