--- a/templates/trigers.html
+++ b/templates/trigers.html
@@ -12,9 +12,9 @@
 
 <div class="container mt-2">
 
-    <table class="table table-dark">
+    <table class="table">
   <thead>
-  <h3 class="text-center text-white bg-dark">Triggered Data</h3>
+  <h3 class="text-center">Triggered Data</h3>
     <tr>
       
       <th scope="col">Hospital Code</th>
